<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bei">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="80dp"
        android:text="@string/hw_language_select"

        android:textColor="@android:color/black"
        android:textSize="30sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/tv_tradition_chinese"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hw_language_zhhk"
            android:textColor="@android:color/black"
            android:textSize="18sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="15dp"
            android:background="#55666666"></View>

        <TextView
            android:id="@+id/tv_simple_chinese"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/hw_language_zh"
            android:textColor="#ff25c0c7"
            android:textSize="18sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="15dp"
            android:background="#55666666"></View>

        <TextView
            android:id="@+id/tv_english"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/hw_language_en"
            android:textColor="@android:color/black"
            android:textSize="18sp"/>
    </LinearLayout>

    <Button
        android:id="@+id/hw_language_next"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/btn_sel"
        android:text="@string/hw_next"/>

    <TextView
        android:id="@+id/hw_call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/hw_language_next"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:drawableLeft="@drawable/ic_emergency_call"
        android:drawablePadding="10dp"
        android:text="@string/hw_language_call"
        android:textColor="#ff555555"
        android:textSize="16sp"/>

</RelativeLayout>
