<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bei"
    >

    <LinearLayout
        android:id="@+id/tittle_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingTop="80dp"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/hw_wifi_sel"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:paddingBottom="5dp"
            android:text="@string/hw_wifi_settings"
            android:textColor="@color/custem_text_black"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/hw_wifi_kg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/hw_wifi_sel"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/hw_wifi_select"
            android:textColor="#ff444444"
            android:textSize="16sp"/>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/hw_wifi_kg_rl"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/tittle_container">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginRight="20dp"
                android:scaleType="fitCenter"
                android:src="@drawable/stat_sys_wifi_signal_4"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:drawablePadding="6dp"
                android:gravity="center_vertical"
                android:text="@string/hw_wifi"
                android:textColor="@android:color/black"
                android:textSize="15sp"/>
        </LinearLayout>

        <com.klauncher.setupwizard.hw.CheckSwitchButton
            android:id="@+id/hw_wifi_switch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"/>
    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/hw_wifi_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/hw_wifi_kg_rl"
        android:layout_marginBottom="80dp"
        android:layout_weight="1"
        android:scrollbars="vertical"
        android:visibility="visible"
        />

    <!--android:background="#ffdfdfdf"-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">
        <!--android:drawableLeft="@drawable/ic_ab_back_small_emui"-->
        <TextView
            android:id="@+id/hw_wifi_back"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/btn_sel"
            android:gravity="center"
            android:text="@string/hw_wifi_pre_step"
            android:textColor="#ff444444"
            android:textSize="20sp"/>

        <!--android:drawableRight="@drawable/ic_ab_back_right_small_emui"-->
        <TextView
            android:id="@+id/hw_wifi_next"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_weight="1"
            android:background="@drawable/btn_sel"
            android:gravity="center"
            android:text="@string/hw_wifi_jump"
            android:textColor="#ff555555"
            android:textSize="18sp"/>
    </LinearLayout>

</RelativeLayout>
